--- a/styles/variaveis.scss
+++ b/styles/variaveis.scss
@@ -1,18 +1,18 @@
-$fontRegular: 'Biennale Regular';
-$fontBold: 'Biennale Bold';
-$fontLight: 'Biennale Light';
+$fontRegular: "Biennale Regular";
+$fontBold: "Biennale Bold";
+$fontLight: "Biennale Light";
 
-$corPrimaria1: #3BD42D;
-$corPrimaria2: #5E49FF;
-$corPrimaria3: #25CBD3;
-$corPrimaria4: #F0F5FF;
+$corPrimaria1: #3bd42d;
+$corPrimaria2: #5e49ff;
+$corPrimaria3: #25cbd3;
+$corPrimaria4: #f0f5ff;
 
-$branco: #FFFFFF;
+$branco: #ffffff;
 
-$cinza0: #F4F4F4;
-$cinza1: #DADADA;
-$cinza2: #7C7786;
-$cinza3: #4D4C4D;
+$cinza0: #f4f4f4;
+$cinza1: #dadada;
+$cinza2: #7c7786;
+$cinza3: #4d4c4d;
 $cinza4: #333333;
 
 $desktopBreakpoint: 992px;
