--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,6 +7,14 @@
 }
 
 @import "../componentes/botao/botao.scss";
+@import "./paginaPublica.scss";
+
+html,
+body,
+#_next {
+  height: 100%;
+  margin: 0;
+}
 
 .avatar {
   border-radius: 50%;
