--- a/styles/paginaPublica.scss
+++ b/styles/paginaPublica.scss
@@ -4,10 +4,83 @@
   height: 100%;
   align-items: center;
   justify-content: center;
+  padding: 0 3rem;
 
   .logoContainer {
     position: relative;
-    height: 13%;
     width: 100%;
+    height: 13%;
+    margin-bottom: 4rem;
+
+    .logo {
+      width: 100%;
+    }
+  }
+
+  .conteudoPaginaPublica {
+    width: 100%;
+  }
+  .btn {
+    margin-top: 1.7rem;
+    padding: 0.7rem;
+  }
+
+  .footerPaginaPublica {
+    text-align: center;
+    margin-top: 1.7rem;
+
+    p {
+      color: $cinza2;
+      margin: 0 0 0.15rem;
+    }
+
+    a {
+      color: $corPrimaria2;
+      font-family: $fontBold;
+    }
+  }
+
+  @media screen and (min-width: $desktopBreakpoint) {
+    flex-direction: row;
+    padding: 0 8.75rem;
+
+    .logoContainer {
+      height: 30%;
+      flex: 2;
+      margin-bottom: -1.875rem;
+
+      .logo {
+        height: 100%;
+        width: 100%;
+        max-width: 18.75rem;
+        margin: 0 auto;
+      }
+    }
+
+    .conteudoPaginaPublica {
+      flex: 1;
+      width: 30%;
+      border: 1px solid $corPrimaria2;
+      border-radius: 1.625rem;
+      padding: 3.125rem;
+    }
+
+    .btn {
+      padding: 1.125rem;
+      font-size: 1.125rem;
+    }
+
+    .footerPaginaPublica {
+      p,
+      a {
+        font-size: 1.125rem;
+      }
+    }
+
+    .inputPublico {
+      input {
+        font-size: 1rem;
+      }
+    }
   }
 }
