validação das telas login e cadastro.

--- a/pages/cadastro/cadastro.scss
+++ b/pages/cadastro/cadastro.scss
@@ -3,6 +3,8 @@
     text-align: center;
     position: relative;
     margin-bottom: 3rem;
+    cursor: pointer;
+
     .avatarPreview {
       width: 7.5rem;
       height: 7.5rem;
