--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -56,6 +56,14 @@ input {
   }
 }
 
+.mensagemValidacao {
+  display: block;
+  color: $vermelho;
+  font-size: 90%;
+  margin-top: -0.938rem;
+  margin-bottom: 0.938rem;
+}
+
 @import "../public/fonts/fonts.scss";
 @import "../componentes/botao/botao.scss";
 @import "./paginaPublica.scss";
