--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -64,8 +64,24 @@ input {
   margin-bottom: 0.938rem;
 }
 
+.barraNavegacao {
+  ul {
+    display: flex;
+    justify-content: space-around;
+    padding: 0;
+    margin: 0.625rem 0;
+
+    li {
+      list-style: none;
+      cursor: pointer;
+    }
+  }
+}
+
 @import "../public/fonts/fonts.scss";
 @import "../componentes/botao/botao.scss";
 @import "./paginaPublica.scss";
 @import "../componentes/inputPublico/inputPublico.scss";
 @import "../pages/cadastro/cadastro.scss";
+@import "../componentes/layout/header.scss";
+@import "../componentes/layout/footer.scss";
